# wake

./: .buildinfo  .cargo  .cirrus.yml  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .wakeignore  .wakemanifest  .wakeroot  LICENSE  Makefile  README.md  action.cpp  action.h  bind.cpp  bind.h  build.wake  build_squashfuse.sh  clean  contents.html  cst.cpp  cst.h  database.cpp  database.h  do.wake  docs  expr.cpp  expr.h  gcc.wake  genindex.html  gmon.out  hash.h  heap.cpp  heap.h  index.html  input.txt  integer.cpp  job.cpp  job.h  (+48 more)
.circleci/: config.yml
.circleci/dockerfiles/: Dockerfile.centos_6_6  Dockerfile.centos_7_0  Dockerfile.centos_7_6  Dockerfile.debian_10  Dockerfile.debian_testing  Dockerfile.debian_wheezy  Dockerfile.ubuntu_16_04  Dockerfile.ubuntu_18_04  alpine  centos-6.6  centos-7.6  centos-8.3  debian-jessie  debian-testing  debian-wheezy  rocky-9  ubuntu-14.04  ubuntu-16.04  ubuntu-18.04  wasm  wasm-stable
.github/workflows/: build.yaml  ci.yml
_sources/: contents.txt  lib.rst.txt  lib.txt
_sources/core/: core.rst.txt  core.txt
_sources/gcc_wake/: gcc_wake.txt
_sources/nothing/: nothing.txt
_sources/system/: system.rst.txt  system.txt
_sources/versions/: versions.rst.txt  versions.txt
bsp/: bsp.cpp  bsp.wake
bubblewrap/: wrap
cargo/: .env  Cargo.toml
cargo/entity/src/: prelude.rs
cargo/migration/src/: m20220101_000001_create_table.rs
cargo/src/: main.rs
common/: aligned_alloc.c  common.wake  execpath.cpp  execpath.h  jlexer.re  jparser.cpp  json5.cpp  json5.h  lexint.cpp  lexint.h  lexint.re  location.cpp  location.h  membytes.h  mkdir_parents.cpp  mtime.cpp  mtime.h  physmem.cpp  physmem.h  rusage.cpp  rusage.h  shell.cpp  sigwinch.cpp  sigwinch.h  siphash.cpp  spawn.cpp  spawn.h  unlink.cpp  unlink.h  utf8.cpp  utf8.h  utimens.cpp  utimens.h  whereami.cpp
core/: core.html
debian/: .gitignore  README  changelog  changelog.in  control  copyright  rules  wake.install
doc/: ctags  datastructures.txt  quickref.md  tutorial.adoc  tutorial.md  wake-4.1.jsf  wake-4.6.jsf  wake-mode.el
extensions/vscode/: .gitignore  .vscodeignore  .wakeignore  LICENSE.txt  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  package.json.in  tsconfig.json  vscode.wake  webpack.config.js
fuse/: client.cpp  daemon.cpp  daemon_client.cpp  fuse.cpp  fuse.h  fuse.wake  namespace.cpp  namespace.h
gcc_wake/: gcc_wake.html
gopt/: CHANGELOG.txt  README.txt  gopt-arg.c  gopt-arg.h  gopt-usage.c  gopt.c  gopt.wake
lemon/: lemon.wake  lempar.c
lib/: gcc.wake  pkgconfig.wake
lib/wake/: lsp-wake-1.js  lsp-wake.native-cpp11-release  lsp-wake.wasm  (+1 more)
lsp/: emscripten.wake  lsp.cpp  lsp.wake
nothing/: nothing.html
preload/: open.c  preload.wake  wrap.cpp
re2c/: fake-re2c  re2c.wake
rust/gsc/: Cargo.toml
rust/gsc/src/: main.rs  read_job.rs  types.rs
rust/gsc/src/common/: config.rs
rust/gsc/src/gsc/: add_job.rs  main.rs  read_job.rs
rust/gsc/src/gsc_tool/: main.rs  table.rs
rust/log_viewer/: Cargo.toml  build.wake  test.json
rust/log_viewer/src/: main.rs
rust/migration/: test  (+1 more)
rust/rsc/: .config.json  Cargo.toml  postgres-cmd-spec.json  postgres-tests.wake  rsc.wake
rust/rsc/rsc_logs/: rsc.log.2024-07-18
rust/rsc/src/: config.rs  database.rs  lib.rs
rust/rsc/src/common/: config.rs  database.rs
rust/rsc/src/rsc/: add_job.rs  api_key_check.rs  blob.rs  blob_store_impls.rs  blob_store_service.rs  eviction.rs  main.rs  read_job.rs  types.rs
rust/rsc/src/rsc_tool/: main.rs  table.rs
scripts/: compile_commands  compile_commands.py  digraph  dump_prims.py  fetch  profile_rsc.py  wake2rst.py  which_clang_files  which_wake_files
shim/: blake2b-ref.cpp  shim.c  shim.cpp  shim.wake
sphinx-wake-workspace/: setup.py
src/: bind.cpp  bind.h  cases.cpp  cse.cpp  database.cpp  database.h  datatype.cpp  datatype.h  deadcode.cpp  decon.cpp  describe.cpp  describe.h  double.cpp  dsu.h  exception.cpp  expr.cpp  expr.h  gc.cpp  gc.h  git.wake  hash.h  heap.cpp  heap.h  inline.cpp  integer.cpp  job.cpp  job.h  json.cpp  location.cpp  location.h  main.cpp  markup.cpp  markup.h  meta.h  optimize.h  parser.cpp  parser.h  polymorphic.cpp  prim.cpp  prim.h  (+38 more)
system/: system.html
tests/: .wakeignore  README.md  test_all.sh  test_util.sh  tests.wake  wake-ignore.t
tools/: tools.wake
utf8proc/: utf8proc.wake
util/: fuse.cpp
versions/: versions.html
wakebox/: build.wake  main.cpp
(+687 files in other folders)
