[package]
name = "wake"
version = "0.1.0"
edition = "2021"


[workspace]
members = [".",  "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
hyper = "0.14.26"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = "0.4.1"
