[package]
name = "gsc"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6.18"
blake2 = "0.10.6"
serde_bytes = "0.11.9"
