[package]
name = "gsc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gsc"
path = "src/gsc/main.rs"

[[bin]]
name = "gsc_tool"
path = "src/gsc_tool/main.rs"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6.18"
serde_bytes = "0.11.9"
blake3 = "1.4.0"
sea-orm-migration = "0.11.3"
gumdrop = "0.8.1"
data-encoding = "2.4.0"
cli-table = "0.4.7"
rand = "0.8.5"
rand_core = "0.6.4"
inquire = { version = "0.6.2", features = [] }
atty = "0.2.14"
papergrid = "0.9.1"
