[package]
name = "log_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
color-eyre = "0.6.2"
crossterm = "0.26.1"
gumdrop = "0.8.1"
palette = "0.7.2"
serde = { version = "1.0.171", features = ["std", "derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.100"
sobol = "1.0.2"
