[package]
name = "rsc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsc"
path = "src/rsc/main.rs"

[[bin]]
name = "rsc_tool"
path = "src/rsc_tool/main.rs"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6.18"
serde_bytes = "0.11.9"
blake3 = "1.4.0"
data-encoding = "2.4.0"
rand_core = "0.6.4"
inquire = { version = "0.6.2", features = [] }
atty = "0.2.14"
papergrid = "0.9.1"
textwrap = "0.16.0"
chrono = "0.4.26"
config = "0.13.3"
serde_json = "1.0.100"
clap = { version = "4.3.23", features = ["derive"] }
is-terminal = "0.4.9"
